assets/css/style.css
/* --------- Global style */
*{
    margin: 0;
    background-color:black;
}
body {
    font-family: "Raleway", sans-serif;
    color: #445361;
    text-align: center;
    margin: 0;
}

#container h1{
    background-color:blue;
    top:90px;
    left:100px;
    font-size: 2rem;
    text-align: center;
    color: orange;
}

.container404 h1{
    padding:10px;
    margin-top: 10px;
    margin-left:5vw;
    background-color: blue;
    color:orange;
    width: 85vw;
    text-align:center;
    font-size: 2rem;
    left: 5vw; 
}

.container404 h2{
    padding:10px;
    margin-top: 10px;
    background-color: blue;
    color:orange;
    width: 85vw;
    text-align:center;
    position:fixed;
    font-size: 1.5rem;
    left: 5vw;  
}

.container404 p{
    position: fixed;
    padding:10px;
    margin-top: 10px;
    width: 85vw;
    text-align:center;
    font-size: 1.5rem;
    top: 230px;
    left: 5vw;     
}

.game_over_text h1{
    padding:10px;
    margin-top: 10px;
    margin-left:5vw;
    background-color: blue;
    color:orange;
    width: 85vw;
    text-align:center;
    font-size: 2rem;
    left: 5vw; 
}

.game_over_text h2{
    padding:10px;
    margin-top: 10px;
    background-color: blue;
    color:orange;
    width: 85vw;
    text-align:center;
    position:fixed;
    font-size: 1.5rem;
    left: 5vw;  
}

p.index_text {
    padding:10px;
    margin-top: 10px;
    background-color: blue;
    color:orange;
    width: 85vw;
    text-align:center;
    position:fixed;
    font-size: 1rem;
    left: 5vw;  
}

p.game_over_text {
    padding:10px;
    margin-top: 10px;
    background-color: blue;
    color:orange;
    width: 85vw;
    text-align:center;
    position:fixed;
    font-size: 1rem;
    left: 5vw;  
}

#score{
    overflow:auto;
    padding:10px;
    margin-top: 20px;
    background-color: blue;
    color:orange;
    width: 85vw;
    text-align:center;
    position:fixed;
    top: 140px;
    font-size: 1rem;
    left: 5vw;
}

#score-value{
    color: white;
}

#playAgain{
    padding: 20px;
    margin-top:100px;
    border-style: solid;
    border-width: 1px;
    border-color: orange;
    background-color: lightskyblue; 
}

#playGame{
    padding: 20px;
    margin-top:300px;
    border-style: solid;
    border-width: 1px;
    border-color: orange;
    background-color: lightskyblue; 
}
 

#playSoundTrack, #pauseSoundTrack, #pauseGame, #exitGame{
    padding: 20px;
   
    border-style: solid;
    border-width: 1px;
    border-color: orange;
    background-color: lightskyblue;   
}


#left{
    height:30vh;
    display:none;
}

#right{
   height: 30vh;
   display:none;
}

#center{
   background-color:lightblue;
}

#left-button, #right-button{
    height:30vh;
    background-color: blue;
}

#left-shoot-button, #right-shoot-button{
    height: 30vh;
    background-color:red;
}
/* media query: laptops and larger (992px and up) */
@media screen and (min-width: 992px) {
    p.index_text{
        overflow:auto;
        margin:10px;
        padding-top: 20px;
        background-color: blue;
        color:orange;
        width: 60vw;
        text-align:center;
        position:fixed;
        font-size: 2rem;
        left: 20vw;
    }
    #playGame{
        padding: 20px;
        margin-top:480px;
        border-style: solid;
        border-width: 1px;
        border-color: orange;
        background-color: lightskyblue; 
    }
}

